<resources>
    <string name="app_name">fourth</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="registration">SIGN UP</string>
    <string name="enter_email">Email</string>
    <string name="enter_name">Name</string>
    <string name="have_account">Already have an account? <u>Sign In</u></string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="no_have_account">Haven\'t got an account? <u>Sign Up</u></string>
    <string name="enter_email_or_id">Enter your email to get the recovery code</string>
    <string name="solved">0</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_left_navigation">LeftNavigation</string>
    <string name="title_notifications">Notifications</string>
    <string name="notifications">Notifications</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="language">Language</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="support">Support</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="image_select_failed">Fail in downloading. Please, try again</string>
    <string name="messages">Messages</string>
    <string name="friends">Friends</string>
    <string name="send_message">Message</string>
    <string name="search">Search</string>
</resources>